# llvm-practice

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
scripts/: llvmJit.sh  runPass.sh
src/: BackEdgeDetectorPass.cpp  BackEdgeDetectorPass.h  BasicBlockCounterPass.cpp  BasicBlockCounterPass.h  CFGEdgeCounterPass.cpp  CFGEdgeCounterPass.h  CMakeLists.txt  InstructionCountPass.cpp  InstructionCountPass.h
src/helpers/: JsonHelpers.h  JsonLLVMHelpers.h  MathHelpers.h
src/visualize/: CMakeLists.txt  main.cpp
test/: test1.c
